# murder-engine

./: CMakeLists.txt  README.md
cmake/modules/: FindGLFW3.cmake
src/: .clang-tidy  CMakeLists.txt  arena_string.h  bindings.c  common.h  config.h.in  glad.c  glad.h  main.c  opengl.c  script.c  stb_ds.h  vertex.c  vulkan.c
src/glad/: glad.c
src/scripts/: CMakeLists.txt  init.wren
src/shaders/: CMakeLists.txt  gl-fragment.glsl  gl-light.glsl  gl-vertex.glsl
src/wren/: wren.c
